--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node backend/server.js "
+    "start": "node backend/server.js ",
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "dev":"concurrently \"npm run server\" \" npm run client\""
   },
   "author": "ayoub nasraoui",
   "license": "MIT",
