--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "node backend/server.js ",
     "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
-    "dev":"concurrently \"npm run server\" \" npm run client\""
+    "dev": "concurrently \"npm run server\" \" npm run client\""
   },
   "author": "ayoub nasraoui",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.3"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
