--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "ayoub nasraoui",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "mongoose": "^8.2.2"
   },
   "devDependencies": {
     "dotenv": "^16.4.5"
