--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,8 +18,8 @@
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "devtool": "inline-cheap-module-source-map"
+    "react-toastify": "^10.0.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
