--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,9 @@
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0",
+    "react-redux": "^e9.1.0",
     "react-router-bootstrap": "^0.26.2",
-    "react-router-dom": "^6.10.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
     "web-vitals": "^2.1.4"
